...
        
        usernameField.delegate = self
        usernameField.frame = CGRect(x: 0, y: screenBounds.height/8, width: screenBounds.width, height: screenBounds.height/15)
        usernameField.backgroundColor = UIColor.colorWithAlphaComponent(whiteColor)(0.5)
        usernameField.placeholder = "Username"
        usernameField.textAlignment = .Center
        usernameField.accessibilityLabel = "username"
        usernameField.autocorrectionType = .No
        usernameField.delegate = self
        usernameField.userInteractionEnabled = true
        usernameField.autocapitalizationType = UITextAutocapitalizationType.None
        
        emailField.delegate = self
...
        passwordField.backgroundColor = UIColor.whiteColor()
        passwordField.backgroundColor = UIColor.colorWithAlphaComponent(whiteColor)(0.5)
        passwordField.placeholder = "Password"
        passwordField.textAlignment = .Center
        passwordField.secureTextEntry = true
        passwordField.delegate = self
        passwordField.accessibilityLabel = "password"
        
        submitButton.frame = CGRect(x: screenBounds.width/4, y: screenBounds.height/2, width: screenBounds.width/2, height: 30)
        submitButton.setTitleColor(.whiteColor(), forState: .Normal)
        submitButton.setTitle("Submit", forState: .Normal)
        submitButton.accessibilityLabel = "submit"
        
        loginButton.frame = CGRect(x: screenBounds.width*2/5, y: screenBounds.height*0.45, width: screenBounds.width/5, height: 30)
        loginButton.setTitleColor(.whiteColor(), forState: .Normal)
        loginButton.setTitle("Login", forState: .Normal)
        loginButton.accessibilityLabel = "login"
        
        
        signupButton.frame = CGRect(x: screenBounds.width*2/5, y: screenBounds.height*0.55, width: screenBounds.width/5, height: 30)
        signupButton.setTitleColor(.whiteColor(), forState: .Normal)
        signupButton.setTitle("Signup", forState: .Normal)
        signupButton.accessibilityLabel = "signup"
...
